--- a/ebpH/mainwindow.ui
+++ b/ebpH/mainwindow.ui
@@ -7,8 +7,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>964</width>
-    <height>678</height>
+    <width>933</width>
+    <height>723</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,8 +28,14 @@
    <layout class="QGridLayout" name="gridLayout">
     <item row="1" column="0">
      <widget class="QPlainTextEdit" name="event_log">
+      <property name="statusTip">
+       <string>ebpH event log</string>
+      </property>
       <property name="readOnly">
        <bool>true</bool>
+      </property>
+      <property name="backgroundVisible">
+       <bool>false</bool>
       </property>
      </widget>
     </item>
@@ -47,7 +53,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>964</width>
+     <width>933</width>
      <height>29</height>
     </rect>
    </property>
@@ -88,7 +94,7 @@
     <addaction name="action_Start_Monitoring"/>
     <addaction name="action_Stop_Monitoring"/>
     <addaction name="separator"/>
-    <addaction name="action_Inspect_Executable"/>
+    <addaction name="action_View_Modify_Profile"/>
    </widget>
    <addaction name="menu_File"/>
    <addaction name="menu_Actions"/>
@@ -96,6 +102,29 @@
    <addaction name="menu_Help"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <property name="layoutDirection">
+    <enum>Qt::LeftToRight</enum>
+   </property>
+   <property name="toolButtonStyle">
+    <enum>Qt::ToolButtonTextBesideIcon</enum>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="action_Start_Monitoring"/>
+   <addaction name="action_Stop_Monitoring"/>
+   <addaction name="separator"/>
+   <addaction name="action_View_Modify_Profile"/>
+   <addaction name="separator"/>
+   <addaction name="action_Quit"/>
+  </widget>
   <action name="action_About">
    <property name="text">
     <string>&amp;About ebpH</string>
@@ -110,30 +139,58 @@
    </property>
   </action>
   <action name="action_Quit">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/img/assets/img/icons/delete.png</normaloff>:/img/assets/img/icons/delete.png</iconset>
+   </property>
    <property name="text">
     <string>&amp;Quit</string>
+   </property>
+   <property name="statusTip">
+    <string>Exit the application</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Q</string>
    </property>
   </action>
   <action name="action_Start_Monitoring">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/img/assets/img/icons/eye.png</normaloff>:/img/assets/img/icons/eye.png</iconset>
+   </property>
    <property name="text">
     <string>&amp;Start Monitoring</string>
+   </property>
+   <property name="statusTip">
+    <string>Start monitoring processes</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+S</string>
    </property>
   </action>
   <action name="action_Stop_Monitoring">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/img/assets/img/icons/hide.png</normaloff>:/img/assets/img/icons/hide.png</iconset>
+   </property>
    <property name="text">
     <string>&amp;Stop Monitoring</string>
+   </property>
+   <property name="statusTip">
+    <string>Stop monitoring processes</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+S</string>
    </property>
   </action>
-  <action name="action_Inspect_Executable">
+  <action name="action_View_Modify_Profile">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/img/assets/img/icons/browser.png</normaloff>:/img/assets/img/icons/browser.png</iconset>
+   </property>
    <property name="text">
     <string>View/Modify &amp;Profile</string>
    </property>
