--- a/ebpH/resources.qrc
+++ b/ebpH/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="img">
+    <file>assets/img/icons/copy.png</file>
     <file>assets/img/logos/logo_transparent.png</file>
     <file>assets/img/logos/logo.png</file>
     <file>assets/img/icons/browser.png</file>
