--- a/ebpH/profiledialog.ui
+++ b/ebpH/profiledialog.ui
@@ -26,7 +26,17 @@
      <item row="1" column="1">
       <layout class="QGridLayout" name="gridLayout_3">
        <item row="0" column="1">
-        <widget class="QLineEdit" name="lineEdit"/>
+        <widget class="QLineEdit" name="comm"/>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLineEdit" name="anomalies"/>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_4">
+         <property name="text">
+          <string>Anomalies</string>
+         </property>
+        </widget>
        </item>
        <item row="0" column="0">
         <widget class="QLabel" name="label_3">
@@ -35,7 +45,7 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
+       <item row="4" column="0">
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -48,26 +58,26 @@
          </property>
         </spacer>
        </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="label_4">
-         <property name="text">
-          <string>Anomalies</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1">
-        <widget class="QLineEdit" name="lineEdit_2"/>
-       </item>
-       <item row="2" column="1">
+       <item row="3" column="1">
         <widget class="QListWidget" name="syscalls"/>
        </item>
-       <item row="2" column="0" alignment="Qt::AlignTop">
+       <item row="3" column="0" alignment="Qt::AlignTop">
         <widget class="QLabel" name="label_5">
          <property name="text">
           <string>Recent
 System Calls</string>
          </property>
         </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="label_6">
+         <property name="text">
+          <string>Train Count</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QLineEdit" name="train_count"/>
        </item>
       </layout>
      </item>
