some logo changes

--- a/ebpH/resources.qrc
+++ b/ebpH/resources.qrc
@@ -3,6 +3,7 @@
     <file>assets/img/icons/redo.png</file>
     <file>assets/img/icons/copy.png</file>
     <file>assets/img/logos/logo_transparent.png</file>
+    <file>assets/img/logos/logo_word.png</file>
     <file>assets/img/logos/logo.png</file>
     <file>assets/img/icons/browser.png</file>
     <file>assets/img/icons/delete.png</file>
