--- a/ebpH/profiledialog.ui
+++ b/ebpH/profiledialog.ui
@@ -123,7 +123,7 @@
             </widget>
            </item>
            <item row="4" column="2">
-            <widget class="QLineEdit" name="train_count">
+            <widget class="LazyLineEdit" name="train_count">
              <property name="inputMethodHints">
               <set>Qt::ImhDigitsOnly</set>
              </property>
@@ -146,10 +146,14 @@
             </spacer>
            </item>
            <item row="1" column="2">
-            <widget class="QLineEdit" name="key"/>
+            <widget class="LazyLineEdit" name="key">
+             <property name="readOnly">
+              <bool>true</bool>
+             </property>
+            </widget>
            </item>
            <item row="3" column="2">
-            <widget class="QLineEdit" name="anomalies">
+            <widget class="LazyLineEdit" name="anomalies">
              <property name="inputMethodHints">
               <set>Qt::ImhDigitsOnly</set>
              </property>
@@ -192,7 +196,11 @@
             </widget>
            </item>
            <item row="6" column="2">
-            <widget class="QLineEdit" name="normal_count"/>
+            <widget class="LazyLineEdit" name="normal_count">
+             <property name="readOnly">
+              <bool>true</bool>
+             </property>
+            </widget>
            </item>
            <item row="7" column="0">
             <layout class="QVBoxLayout" name="verticalLayout">
@@ -223,14 +231,14 @@ System Calls</string>
             </layout>
            </item>
            <item row="5" column="2">
-            <widget class="QLineEdit" name="last_mod_count">
+            <widget class="LazyLineEdit" name="last_mod_count">
              <property name="readOnly">
               <bool>true</bool>
              </property>
             </widget>
            </item>
            <item row="0" column="2">
-            <widget class="QLineEdit" name="comm">
+            <widget class="LazyLineEdit" name="comm">
              <property name="readOnly">
               <bool>true</bool>
              </property>
@@ -247,7 +255,11 @@ System Calls</string>
             </widget>
            </item>
            <item row="2" column="2">
-            <widget class="QLineEdit" name="state"/>
+            <widget class="LazyLineEdit" name="state">
+             <property name="readOnly">
+              <bool>true</bool>
+             </property>
+            </widget>
            </item>
           </layout>
          </item>
@@ -296,6 +308,13 @@ System Calls</string>
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>LazyLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>lazy_line_edit</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="resources.qrc"/>
  </resources>
